tests/syntax_error/fn_args_missing_colon.err.out
error: fn_args_missing_colon.err.li 1,8: unexpected token `int`, expecting `colon`
    1 | fn f(i int)
      |        ^^^
